@@ -10,6 +10,8 @@ PHP                                                                        NEWS
   (Ilia)
 - Fixed bug #42505 (new sendmail default breaks on Netware platform) 
   (Guenter Knauf)
+- Fixed bug #40013 (php_uname() does not return nodename on Netware
+  (Guenter Knauf)
 
 27 Feb 2008, PHP 5.2.6RC1
 - Fixed security issue detailed in CVE-2008-0599. (Rasmus)
